# 072419NativeActivity

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ztn/edu/native072319/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/ztn/edu/native072319/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
